--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.9.+'
-        classpath 'com.squareup.gradle:gradle-android-test-plugin:0.9.0'
+        classpath 'com.android.tools.build:gradle:0.13.0'
     }
 }
 
