--- a/webpay-token/build.gradle
+++ b/webpay-token/build.gradle
@@ -1,4 +1,5 @@
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
+apply plugin: 'robolectric'
 
 android {
     compileSdkVersion 19
@@ -25,4 +26,6 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:19.+'
+    androidTestCompile 'org.robolectric:robolectric:2.3'
+    androidTestCompile 'junit:junit:4.11'
 }
