--- a/webpay-token/build.gradle
+++ b/webpay-token/build.gradle
@@ -20,7 +20,9 @@ android {
     }
 
     sourceSets {
-        instrumentTest.setRoot('src/test')
+        androidTest {
+            setRoot('src/test')
+        }
     }
 }
 
