--- a/webpay-token/src/main/AndroidManifest.xml
+++ b/webpay-token/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jp.webpay.android.token">
+    package="jp.webpay.android">
 
     <application android:allowBackup="true"
         android:label="@string/app_name"
