--- a/webpay-token/build.gradle
+++ b/webpay-token/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:19.+'
     androidTestCompile 'org.robolectric:robolectric:2.3'
     androidTestCompile 'junit:junit:4.11'
+    androidTestCompile 'org.hamcrest:hamcrest-all:1.3'
 }
