--- a/webpay-token/build.gradle
+++ b/webpay-token/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'robolectric'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion '19.1.0'
+    compileSdkVersion 21
+    buildToolsVersion '21.0.2'
 
     defaultConfig {
         minSdkVersion 8
-        targetSdkVersion 19
+        targetSdkVersion 21
         versionCode 1
         versionName '1.0'
     }
@@ -27,9 +27,33 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:19.+'
-    compile 'com.android.support:support-v4:19.+'
-    androidTestCompile 'org.robolectric:robolectric:2.3'
+    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:support-v4:21.0.0'
+
+    // Remove this fix in robolectric 2.4
+    androidTestCompile('org.robolectric:robolectric:2.3') {
+      exclude module: 'classworlds'
+      exclude module: 'maven-artifact'
+      exclude module: 'maven-artifact-manager'
+      exclude module: 'maven-error-diagnostics'
+      exclude module: 'maven-model'
+      exclude module: 'maven-plugin-registry'
+      exclude module: 'maven-profile'
+      exclude module: 'maven-project'
+      exclude module: 'maven-settings'
+      exclude module: 'nekohtml'
+      exclude module: 'plexus-container-default'
+      exclude module: 'plexus-interpolation'
+      exclude module: 'plexus-utils'
+      exclude module: 'wagon-file'
+      exclude module: 'wagon-http-lightweight'
+      exclude module: 'wagon-http-shared'
+      exclude module: 'wagon-provider-api'
+
+      exclude group: 'com.android.support', module: 'support-v4'
+      exclude group: 'commons-logging', module: 'commons-logging'
+      exclude group: 'org.apache.httpcomponents', module: 'httpclient'
+    }
     androidTestCompile 'junit:junit:4.11'
     androidTestCompile 'org.hamcrest:hamcrest-all:1.3'
 }
