--- a/webpay-token/src/main/AndroidManifest.xml
+++ b/webpay-token/src/main/AndroidManifest.xml
@@ -1,14 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jp.webpay.android">
-
-    <!-- To access WebPay -->
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
-    </application>
-
+<manifest package="jp.webpay.android">
 </manifest>
