Remove constraining maitenance version of support libraries

--- a/webpay-token/build.gradle
+++ b/webpay-token/build.gradle
@@ -27,8 +27,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:21.0.0'
-    compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.android.support:appcompat-v7:21.0.+'
+    compile 'com.android.support:support-v4:21.0.+'
 
     androidTestCompile('org.robolectric:robolectric:2.4') {
       exclude group: 'commons-logging', module: 'commons-logging'
