--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:appcompat-v7:21.0.+'
     compile project(':webpay-token')
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
