--- a/webpay-token/build.gradle
+++ b/webpay-token/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'robolectric'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion '21.0.2'
+    buildToolsVersion '21.1.1'
 
     defaultConfig {
         minSdkVersion 8
@@ -23,6 +23,11 @@ android {
         androidTest {
             setRoot('src/test')
         }
+    }
+
+    lintOptions {
+        disable 'RtlHardcoded', 'RtlEnabled', // supports 8+, which does not provide RTL
+                'IconMissingDensityFolder' // decided not to provide
     }
 }
 
