Mark warningsAsErrors true

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -18,6 +18,7 @@ android {
     }
     lintOptions {
         disable 'IconMissingDensityFolder' // decided not to provide
+        warningsAsErrors true
     }
 }
 
