--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
 
         <activity
             android:name=".TokenCreateActivity"
+            android:label="@string/app_name" />
+
+        <activity
+            android:name=".CardIoIntegrationActivity"
             android:label="@string/use_card_io" />
 
         <!-- Card.io -->
