--- a/webpay-token/src/main/AndroidManifest.xml
+++ b/webpay-token/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="jp.webpay.android">
+<manifest package="jp.webpay.android.token">
 </manifest>
