--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jp.webpay.android.sample"
+    package="jp.webpay.android.token.sample"
     android:installLocation="auto" >
 
     <!--Required: connect to webpay.jp -->
