--- a/webpay-token/build.gradle
+++ b/webpay-token/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: 'com.android.library'
 apply plugin: 'robolectric'
 
+description = 'Android Library for creating a WebPay token from a credit-card'
+group = 'jp.webpay'
+version = '1.0.0'
+
 android {
     compileSdkVersion rootProject.compileSdkVersion
     buildToolsVersion rootProject.buildToolsVersion
@@ -9,7 +13,7 @@ android {
         minSdkVersion rootProject.minSdkVersion
         targetSdkVersion rootProject.targetSdkVersion
         versionCode 1
-        versionName '1.0'
+        versionName project.version
     }
 
     buildTypes {
@@ -44,4 +48,8 @@ dependencies {
     }
     androidTestCompile 'junit:junit:4.11'
     androidTestCompile 'org.hamcrest:hamcrest-all:1.3'
+}
+
+if (gradle.startParameter.taskNames.contains('uploadArchives')) {
+    apply from: 'build.publish.gradle'
 }
