--- a/webpay-token/build.gradle
+++ b/webpay-token/build.gradle
@@ -37,10 +37,10 @@ android {
 }
 
 dependencies {
-    //noinspection GradleDynamicVersion
-    compile 'com.android.support:appcompat-v7:21.0.+'
-    //noinspection GradleDynamicVersion
-    compile 'com.android.support:support-v4:21.0.+'
+    //noinspection GradleDependency
+    compile 'com.android.support:appcompat-v7:[21.0.0,)'
+    //noinspection GradleDependency
+    compile 'com.android.support:support-v4:[21.0.0,)'
 
     androidTestCompile('org.robolectric:robolectric:2.4') {
       exclude group: 'commons-logging', module: 'commons-logging'
