--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
 
         <activity
             android:name=".SampleListActivity"
-            android:label="@string/app_name" >
+            android:label="@string/label_sample_list" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -33,11 +33,11 @@
 
         <activity
             android:name=".TokenCreateActivity"
-            android:label="@string/app_name" />
+            android:label="@string/label_token_create" />
 
         <activity
             android:name=".CardIoIntegrationActivity"
-            android:label="@string/use_card_io" />
+            android:label="@string/label_card_io_integration" />
 
         <!-- Card.io -->
         <activity android:name="io.card.payment.CardIOActivity" android:configChanges="keyboardHidden|orientation" />
