--- a/webpay-token/build.gradle
+++ b/webpay-token/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'robolectric'
 
-description = 'Android Library for creating a WebPay token from a credit-card'
+description = 'Android library for creating a WebPay token from a credit card'
 group = 'jp.webpay.android'
 version = '1.0.0'
 
