Add comment for using library from maven central

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -26,6 +26,10 @@ android {
 dependencies {
     //noinspection GradleDynamicVersion
     compile 'com.android.support:appcompat-v7:21.0.+'
+
+    // Use this line on your own project instead of next line
+    // compile 'jp.webpay.android:webpay-token:1.0.0@aar'
     compile project(':webpay-token')
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
