Separate assemble and test for robolectric
http://stackoverflow.com/questions/27574165/classcastexception-noclassdeffounderror-cannot-be-cast-to-runtimeexception

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ android:
     - android-21
     - extra-android-support
     - extra-android-m2repository
-script: "./gradlew build"
+install: "./gradlew assemble"
+script: "./gradlew build -i"
